Cherry-pick 286214@main (4c0ebd7617b5). https://bugs.webkit.org/show_bug.cgi?id=282166

[Clipboard API] Address narrowing conversion warnings
    https://bugs.webkit.org/show_bug.cgi?id=282166

    Reviewed by Adrian Perez de Castro.

    Updated `getTypes` and `readString` methods in PlatformPasteboardLibWPE
    by adding checks that constrain the length values within the bounds of
    `size_t`.

    This avoids narrowing conversion warnings when assigning `uint64_t` values
    to `size_t` across platforms with varying definitions for `size_t`.

    * Source/WebCore/platform/libwpe/PlatformPasteboardLibWPE.cpp:
    (WebCore::PlatformPasteboard::getTypes const):
    (WebCore::PlatformPasteboard::readString const):

    Canonical link: https://commits.webkit.org/286214@main

Canonical link: https://commits.webkit.org/282416.280@webkitglib/2.46