Source/WebCore/platform/libwpe/PlatformPasteboardLibWPE.cpp
@@ -59,7 +59,8 @@ void PlatformPasteboard::getTypes(Vector<String>& types) const
 
     for (unsigned i = 0; i < pasteboardTypes.length; ++i) {
         auto& typeString = pasteboardTypes.strings[i];
-        types.append(String({ typeString.data, typeString.length }));
+        const auto length = std::min(static_cast<size_t>(typeString.length), std::numeric_limits<size_t>::max());
+        types.append(String({ typeString.data, length }));
     }
 
     wpe_pasteboard_string_vector_free(&pasteboardTypes);
@@ -72,7 +73,8 @@ String PlatformPasteboard::readString(size_t, const String& type) const
     if (!string.length)
         return String();
 
-    String returnValue({ string.data, string.length });
+    const auto length = std::min(static_cast<size_t>(string.length), std::numeric_limits<size_t>::max());
+    String returnValue({ string.data, length });
 
     wpe_pasteboard_string_free(&string);
     return returnValue;
